--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Personal-Coach",
+  "name": "Costco-Roscoes-Liquor",
   "version": "5.0.0",
   "homepage": "https://aasports89.github.io/Costco-Roscoes-Liquor/",
   "private": true,
@@ -22,7 +22,7 @@
     "graphql": "^15.4.0",
     "handlebars": "^4.7.7",
     "https-browserify": "^1.0.0",
-    "inquirer": "8.2.4",
+    "inquirer": "^8.2.7",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.1.8",
     "querystring-es3": "^0.2.1",
@@ -31,7 +31,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.3",
