--- a/package.json
+++ b/package.json
@@ -41,18 +41,21 @@
     "url": "^0.11.3",
     "web-vitals": "^2.1.3",
     "wowjs": "^1.1.3",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "reactstrap": "^9.0.2",
+    "sass": "^1.51.0"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "node server/server.js",
-    "build": "cd client && npm run build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed"
+    "build": "react-scripts build",
+    "develop": "concurrently \"cd server && npm start\"",
+    "install": "npm i"
   },
   "eslintConfig": {
     "extends": [
