--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "react-scripts build",
-    "develop": "concurrently \"cd server && npm start\"",
-    "install": "npm i"
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "npm i",
+    "watch": "nodemon",
+    "seed": "node seed.js"
   },
   "eslintConfig": {
     "extends": [
