--- a/package.json
+++ b/package.json
@@ -10,42 +10,46 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.21",
+    "@types/node": "^18.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "animate.css": "^3.7.0",
     "aos": "^2.3.4",
     "api_client": "^0.0.2",
     "apollo-server-express": "^3.6.2",
+    "assert": "^2.1.0",
     "bcrypt": "^5.0.0",
     "bootstrap": "^5.1.3",
     "cloudinary": "^2.0.3",
-    "crypto-browserify": "^3.12.0",
-    "express": "^4.17.2",
+    "crypto-browserify": "^3.12.1",
+    "express": "^4.22.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.18.2",
     "graphql": "^15.4.0",
     "handlebars": "^4.7.7",
     "https-browserify": "^1.0.0",
     "inquirer": "^8.2.7",
+    "jquery": "^3.5.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.1.8",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "querystring-es3": "^0.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.0.2",
+    "sass": "^1.51.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "typescript": "^4.5.4",
     "url": "^0.11.3",
     "web-vitals": "^2.1.3",
-    "wowjs": "^1.1.3",
-    "jsonwebtoken": "^8.5.1",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "reactstrap": "^9.0.2",
-    "sass": "^1.51.0"
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -54,7 +58,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "react-scripts build",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "develop": "concurrently \"cd server && npm run watch\" \"react-scripts start\"",
     "install": "npm i",
     "watch": "nodemon",
     "seed": "node seed.js"
@@ -79,15 +83,15 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "concurrently": "^5.3.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.1.1",
-    "nodemon": "^2.0.3",
-    "concurrently": "^5.1.0"
+    "nodemon": "^2.0.3"
   },
   "description": "Liquor store / gas station app.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AASports89/Costco-Roscoes-Liquor.git"
+    "url": "https://github.com/AASports89/Costco-Roscoes-Liquor"
   },
   "author": "",
   "license": "ISC",
