--- a/package.json
+++ b/package.json
@@ -2,73 +2,68 @@
   "name": "costco-roscoes-liquor",
   "version": "5.0.0",
   "homepage": "https://aasports89.github.io/Costco-Roscoes-Liquor/",
-  "private": true,
-  "main": "server/server.js",
+  "main": "server.js",
+  "type": "module",
   "dependencies": {
-    "@apollo/client": "^3.5.8",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^18.11.21",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "animate.css": "^3.7.0",
     "aos": "^2.3.4",
-    "api_client": "^0.0.2",
-    "apollo-server-express": "^3.6.2",
-    "assert": "^2.1.0",
-    "bcrypt": "^5.0.0",
+    "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.1.3",
-    "cloudinary": "^2.0.3",
-    "crypto-browserify": "^3.12.1",
-    "express": "^4.22.1",
-    "express-handlebars": "^6.0.6",
-    "express-session": "^1.18.2",
-    "graphql": "^15.4.0",
-    "handlebars": "^4.7.7",
-    "https-browserify": "^1.0.0",
-    "inquirer": "^8.2.7",
-    "jquery": "^3.5.1",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
-    "mongoose": "^6.1.8",
-    "os-browserify": "^0.3.0",
-    "path": "^0.12.7",
-    "popper.js": "^1.16.1",
-    "querystring-es3": "^0.2.1",
-    "react": "^17.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.3",
+    "nodemailer": "^7.0.5",
+    "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.22.3",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "^5.0.1",
-    "reactstrap": "^9.0.2",
+    "react-toastify": "^11.0.5",
     "sass": "^1.51.0",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "typescript": "^4.5.4",
-    "url": "^0.11.3",
-    "web-vitals": "^2.1.3",
-    "wowjs": "^1.1.3"
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js && cd client react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "build": "react-scripts build",
-    "develop": "concurrently \"cd server && npm run watch\" \"react-scripts start\"",
-    "install": "npm i",
-    "watch": "nodemon",
-    "seed": "node seed.js"
+    "eject": "react-scripts eject",
+    "seed": "node seed.mjs",
+    "develop": "concurrently \"nodemon\" \"react-scripts start\"",
+    "watch": "nodemon"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ],
+  "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "@types/aos": "^3.0.7",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^5.3.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.1.1",
+    "globals": "^16.3.0",
+    "nodemon": "^2.0.3",
+    "postcss": "^8.5.6"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AASports89/Costco-Roscoes-Liquor.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "Shell Gas™ retail tracking application.",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -80,22 +75,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/aos": "^3.0.7",
-    "concurrently": "^5.3.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "gh-pages": "^6.1.1",
-    "nodemon": "^2.0.3"
-  },
-  "description": "Liquor store / gas station app.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AASports89/Costco-Roscoes-Liquor"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AASports89/Costco-Roscoes-Liquor/issues"
   }
 }
