--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Bloomington-Mini-Mart",
+  "name": "client",
   "version": "1.0.0",
   "homepage": "https://aasports89.github.io/Bloomington-Mini-Mart/",
-  "main": "server/server.js",
+  "proxy": "http://localhost:3000",
+  "main": "server.js",
   "type": "module",
   "dependencies": {
     "aos": "^2.3.4",
@@ -27,14 +28,10 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject",
-    "seed": "node seed.mjs",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
-    "build": "cd client && npm run build"
+    "start": "react-scripts start",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "development": [
     "last 1 chrome version",
@@ -63,7 +60,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "Bloomington-Mini-Mart™ retail tracking application.",
+  "description": "Shell Gas™ retail tracking application.",
   "browserslist": {
     "production": [
       ">0.2%",
